--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title>Tweet Box</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="src/style.css">
 </head>
 <body>
-	<div id="example"></div>
+	<div id="tweet-box"></div>
 	<script src="dist/bundle.js"></script>
 </body>
 </html>
